<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_350"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_350"
                android:contentDescription="@string/article_image"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image"
                android:transitionName="Image_shared"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:title="News"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16"
            app:cardElevation="@dimen/dimen_5"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                    android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/authorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/authorTextHeading"
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_author_text"
                        android:textSize="@dimen/detail_news_heading_text_size" />

                    <TextView
                        android:id="@+id/authorvalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/authorTextHeading"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_author_text_value"
                        android:textSize="@dimen/detail_news_heading_value_text_size"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/authorView">

                    <TextView
                        android:id="@+id/titleTextHeading"
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_title_text"
                        android:textSize="@dimen/detail_news_heading_text_size"


                        />

                    <TextView
                        android:id="@+id/titleTextValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/titleTextHeading"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_title_text_value"
                        android:textSize="@dimen/detail_news_heading_value_text_size"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/descriptionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleView"

                    >

                    <TextView
                        android:id="@+id/descriptionTextHeading"
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_description_text"
                        android:textSize="@dimen/detail_news_heading_text_size"

                        />

                    <TextView
                        android:id="@+id/descriptionTextvalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_toRightOf="@+id/descriptionTextHeading"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_description_text_value"
                        android:textSize="@dimen/detail_news_heading_value_text_size"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/contentView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/descriptionView"

                    >

                    <TextView
                        android:id="@+id/contentTextHeading"
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_content_text"
                        android:textSize="@dimen/detail_news_heading_text_size"

                        />

                        <TextView
                            android:id="@+id/contentTextvalue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/edittextpadding"
                            android:text="@string/dummy_content_text_value"
                            android:textSize="@dimen/detail_news_heading_value_text_size"
                            android:layout_toRightOf="@+id/contentTextHeading"

                            />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/urlView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contentView"

                    >

                    <TextView
                        android:id="@+id/urlTextHeading"
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_Url_text"
                        android:textSize="@dimen/detail_news_heading_text_size"

                        />

                    <TextView
                        android:id="@+id/urlTextvalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/urlTextHeading"
                        android:padding="@dimen/edittextpadding"
                       android:textColor="@color/blue"
                        android:text="@string/dummy_Url_text_value"
                        android:textSize="@dimen/detail_news_heading_value_text_size"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/publishedView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/urlView"

                    >

                    <TextView
                        android:id="@+id/publishedText"
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edittextpadding"
                        android:text="@string/dummy_Published_text"
                        android:textSize="@dimen/detail_news_heading_text_size"
                        />
                    <TextView
                        android:id="@+id/publishedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/publishedText"
                        android:padding="@dimen/edittextpadding"

                        android:text="@string/dummy_Published_text_value"
                        android:textSize="@dimen/detail_news_heading_value_text_size"

                        />
                </RelativeLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>